--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.10.10",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.5.0",
 		"react-router-dom": "^6.30.2",
 		"tailwind-merge": "^3.4.0"
 	}
